@@ -27,14 +27,14 @@
 
 libmandir = $(LIB_MAN_DIR)
 
-libman_SOURCES = Xrandr.man
+libman_PRE = Xrandr.man
 
-libman_DATA = $(libman_SOURCES:man=@LIB_MAN_SUFFIX@) \
+libman_DATA = $(libman_PRE:man=@LIB_MAN_SUFFIX@) \
 	      $(Xrandr_shadows:=.@LIB_MAN_SUFFIX@)
 
 BUILT_SOURCES = shadows.DONE
 
-EXTRA_DIST = $(libman_SOURCES)
+EXTRA_DIST = $(libman_PRE)
 
 CLEANFILES = $(libman_DATA) $(BUILT_SOURCES)
 
